# cw-indexer

./: .gitignore  Cargo.toml  README.md
backend/: Cargo.toml  diesel.toml
backend/migrations/2025-07-17-174738_create_blocks/: up.sql
backend/migrations/2025-07-17-174828_create_transactions/: up.sql
backend/migrations/2025-07-17-174846_create_logs/: up.sql
backend/migrations/2025-07-17-174902_create_accounts/: up.sql
backend/migrations/2025-07-17-174913_create_token_transfers/: up.sql
backend/migrations/2025-07-17-174916_create_token_balances/: up.sql
backend/src/: api.rs  db.rs  indexer.rs  main.rs  models.rs  schema.rs
backend/src/tests/: api.rs  db.rs  environment.rs  indexer.rs  mod.rs
common/: Cargo.toml
common/src/: lib.rs
frontend/: Cargo.toml  index.html  main.css
frontend/src/: app.rs  main.rs
frontend/src/pages/: account_details.rs  block_details.rs  homepage.rs  mod.rs  transaction_details.rs
