[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr", "nightly"] }
leptos_router = { version = "0.6", features = ["csr", "nightly"] }
console_error_panic_hook = "0.1.7"
gloo-net = "0.5.0"

# Workspace dependency
common = { path = "../common" }
serde = { version = "1.0.219", features = ["derive"] }
